--- a/Quiz-web/src/main/resources/static/css/instructorLibrary.css
+++ b/Quiz-web/src/main/resources/static/css/instructorLibrary.css
@@ -115,6 +115,13 @@
     margin-right: 8px;
     
   }
+  .code-block {
+    height: 100px;
+    width: 100px;
+    margin:10px;
+    text-align: center;
+    display:block;
+  }
   .code-background{
     background-color: #7fe3a6;
     padding: 10px;
@@ -131,6 +138,14 @@
   
   .quiz-element{
     margin-top: 20px;
+  }
+
+  .quiz-detailed {
+    border:2px solid #d3d3d3;
+    border-radius: 10px;
+    justify-content: center;
+    text-decoration:none;
+    color:black;
   }
 
   
