--- a/Quiz-web/src/main/resources/templates/instructorLibrary.html
+++ b/Quiz-web/src/main/resources/templates/instructorLibrary.html
@@ -143,12 +143,12 @@
                                 <!--Quiz 1-->
                                 <div class="quiz-element" th:each="listQuiz : ${listQuizList}">
                                     <!---->
-                                    <a class="list-quiz-item" href="quiz-"
+                                    <a class="list-quiz-item" th:href="@{'quiz/' + ${listQuiz.id}}"
                                         style="text-decoration:none; color:black; border:1px solid #d3d3d3; border-radius: 10px;">
                                         <div class="row">
                                             <div class="col col-sm-4">
                                                 <img class="quiz-img"
-                                                    src="https://quizizz.com/_media/questions/3738117f-db72-4963-9193-16bbe0b55f8a_200_200"
+                                                    th:src="@{${listQuiz.imgLstquiz}}"
                                                     alt="Card image cap">
                                                 <div>
                                                     <h5 th:text=${listQuiz.name}></h5>
@@ -162,7 +162,7 @@
                                             <div class="col">
                                                 <div>
                                                     <p>
-                                                        <span class="code-background">
+                                                        <span class="code-background align-middle">
                                                             CODE:
                                                             <span class="code-content" th:text=${listQuiz.id}></span>
                                                         </span>
