--- a/Quiz-web/src/main/resources/templates/quizResult.html
+++ b/Quiz-web/src/main/resources/templates/quizResult.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Question</title>
+    <title>Result</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css/}" type="text/css" />
