--- a/Quiz-web/src/main/resources/static/css/instructorLibrary.css
+++ b/Quiz-web/src/main/resources/static/css/instructorLibrary.css
@@ -1,6 +1,7 @@
 * {
-    margin: 0;
+  margin: 0;
   }
+
   .main-header {
     background-color: #663399;
     height: 56px;
@@ -148,4 +149,127 @@
     color:black;
   }
 
-  
+#quiz-body {
+  font-size: medium;
+}
+
+.question {
+  padding: 1rem;
+  margin: 1rem;
+  border: 1px solid #786E6E;
+  border-radius: 8px;
+  margin: 1rem;
+  color: black;
+}
+
+.question__head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.quiz_button {
+  border: none;
+  background: none;
+  padding: 5px;
+  font-size: 20px;
+}
+
+.btn__remove {
+  color: #A12F2F
+}
+
+.btn__update {
+  color: #16A034
+}
+
+.question__name {
+  border: 1px solid black;
+  border-radius: 8px;
+  width: 7.5rem;
+  font-size: 20px;
+  text-align: center;
+  padding: 5px;
+}
+
+.question__body {
+  padding: 1rem;
+}
+
+.question__list_answer {
+  display: flex;
+  flex-direction: column;
+}
+
+.group-ans {
+  display: flex;
+}
+
+.answer {
+  width: 27rem;
+  margin: 1.5rem;
+  display: flex;
+  align-items: center;
+}
+
+.question__answer {
+  font-size: 20px;
+}
+
+/* checkmark */
+
+.answer__a,
+.answer__b,
+.answer__c,
+.answer__d {
+  font-size: 3rem;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  color: black;
+}
+
+.check_container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+
+/* Hide the browser's default checkbox */
+
+.check_container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  font-size: 3rem;
+  color: lightslategray;
+  margin: 1rem;
+  padding: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+}
+
+
+/* When the checkbox is checked, add a blue background */
+
+.check_container input:checked~.checkmark {
+  background-color: #00b359;
+}
+
+
+/* Show the checkmark when checked */
+
+.check_container input:checked~.checkmark:after {
+  display: block;
+}
