--- a/Quiz-web/src/main/resources/templates/instructorViewQuiz.html
+++ b/Quiz-web/src/main/resources/templates/instructorViewQuiz.html
@@ -30,7 +30,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <script th:src="@{/js/jquery-3.6.6.min.js}"></script>
+    <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <!---->
     <header>
         <div class="collapse" id="navbarToggleExternalContent">
@@ -145,11 +145,7 @@
                             <!--/Quiz-->
 
                             <!--List Quiz-->
-                            <div class="container">
-                                <div class="row">
-
-                                </div>
-                            </div>
+                            <div id="quiz-body"></div>
                             <!--/List Quiz-->
 
                         </div>
