--- a/Quiz-web/src/main/resources/templates/instructorLibrary.html
+++ b/Quiz-web/src/main/resources/templates/instructorLibrary.html
@@ -148,7 +148,7 @@
                                         <div class="row">
                                             <div class="col col-sm-4">
                                                 <img class="quiz-img"
-                                                    th:src="@{${listQuiz.imgLstquiz}}"
+                                                     th:src="@{${'/imgsrc'+listQuiz.imgLstquiz}}"
                                                     alt="Card image cap">
                                                 <div>
                                                     <h5 th:text=${listQuiz.name}></h5>
