--- a/Quiz-web/src/main/resources/static/css/studentHome.css
+++ b/Quiz-web/src/main/resources/static/css/studentHome.css
@@ -139,3 +139,7 @@ table {
     -webkit-box-shadow: 0px 6px 16px rgb(100, 100, 100);
     box-shadow: 0px 6px 16px rgb(100, 100, 100);
 }
+
+.login-but:hover {
+    background-color: #663399;
+}
