--- a/Quiz-web/src/main/resources/templates/instructorViewQuiz.html
+++ b/Quiz-web/src/main/resources/templates/instructorViewQuiz.html
@@ -125,7 +125,7 @@
                             <div class="row quiz-detailed align-middle">
                                 <div class="col col-sm-4">
                                     <img class="quiz-img"
-                                         th:src="@{${'/imgsrc'+listQuiz.imgLstquiz}}"
+                                         th:src="@{${listQuiz.imgLstquiz}}"
                                          alt="Card image cap">
                                     <div>
                                         <h5 th:text=${listQuiz.name}></h5>
