--- a/Quiz-web/src/main/resources/templates/home.html
+++ b/Quiz-web/src/main/resources/templates/home.html
@@ -44,18 +44,26 @@
                 </a>
             </div>
             <div class="main-search">
-                <form class="form-inline">
+                <form action="/search" method="get" class="form-inline">
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text search-logo"><i class="fas fa-search"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Search" size="40%">
+                        <input type="text" class="form-control" name="list_id" placeholder="Search" size="40%">
                     </div>
                 </form>
             </div>
             <div class="main-header-right">
-                <a class="join-game-btn " href="/search"><span class="fas fa-search"> Search</span></a>
+                <button type="submit" class="join-game-btn"><span class="fas fa-search"> Search</span></button>
             </div>
+            <script type="text/javascript" th:src="@{/webjars/jquery/3.3.1-1/jquery.js}"></script>
+            <script>
+                $(document).ready(function() {
+                    $(".join-game-btn").click(function (){
+                        $(".form-inline:first").submit();
+                    });
+                })
+            </script>
             <div class="main-header-right" style="width: 25%;"></div>
             <div class="main-header-right">
                 <a class="join-game-btn " href="/student-home"><span><i class="fas fa-home" aria-hidden="true"></i>
