--- a/Quiz-web/src/main/resources/templates/instructorHome.html
+++ b/Quiz-web/src/main/resources/templates/instructorHome.html
@@ -142,7 +142,7 @@
                                                 class="card"
                                                 style="text-decoration:none; color:black;width: 90%; border:1px solid #d3d3d3; border-radius: 10px;">
                                                 <img th:src="@{${listQuiz.imgLstquiz}}"
-                                                    style="width: 100%; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+                                                    style="width: 100%; border-top-left-radius: 10px; border-top-right-radius: 10px;" onerror=this.src='image/quiz.jpg'>
                                                 <!-- <hr> -->
                                                 <div class="card-body"
                                                     style="background-color: #7a4ab8; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
