--- a/Quiz-web/src/main/resources/templates/instructorViewQuiz.html
+++ b/Quiz-web/src/main/resources/templates/instructorViewQuiz.html
@@ -134,7 +134,7 @@
                             <!--Quiz-->
                             <div class="row quiz-detailed align-middle">
                                 <div class="col col-sm-4">
-                                    <img class="quiz-img" th:src="@{${listQuiz.imgLstquiz}}" alt="Card image cap">
+                                    <img class="quiz-img" th:src="@{${listQuiz.imgLstquiz}}" onerror=this.src='/image/quiz.jpg'>
                                     <div>
                                         <h5 th:text=${listQuiz.name}></h5>
                                         <p th:text=${listQuiz.category.name}></p>
