--- a/Quiz-web/src/main/resources/static/css/signup.css
+++ b/Quiz-web/src/main/resources/static/css/signup.css
@@ -8,3 +8,15 @@
     background-color: rgb(192, 186, 186);
     border: 1px solid #bbbbbb;
 }
+
+.p-error {
+    color: darkred;
+    text-align: center;
+    font-weight: bold;
+}
+
+.p-success {
+    color: darkgreen;
+    text-align: center;
+    font-weight: bold;
+}
