--- a/Quiz-web/src/main/resources/templates/login.html
+++ b/Quiz-web/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-between m-0">
-                            <a th:href="@{/signup}"><p class="p-login-question">Don't have account?</p></a>
+                            <a th:href="@{/signup}"><p class="p-login-question">I don't have account...</p></a>
                             <p class="p-login-question">Forgot password?</p>
                         </div>
                         <button type="submit" class="gradient-button">Login</button>
