--- a/Quiz-web/src/main/resources/templates/signup.html
+++ b/Quiz-web/src/main/resources/templates/signup.html
@@ -1,123 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Fonts -->
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <link rel="stylesheet" th:href="@{/css/signup.css}">
-
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <title>Signup</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css/}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/5.0.10/web-fonts-with-css/css/fontawesome-all.min.css}"
+        type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/login.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/css/signup.css}" type="text/css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-laravel"
-        style="background-color: #eeeeee; height: min(50vw, 250px)">
-        <div class="container">
-            <div>
-                <p class="navbar-brand" style="font-size: min(8vw, 80px);">Signup</p><br>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-sm-5 align-self-center container-blue">
+                <div class="box">
+                    <h1 class="h1-login">Signup</h1>
+                    <p class="p-error" th:if="${error}" th:text="${error}"></p>
+                    <p class="p-success" th:if="${success}" th:text="${success}"></p>
+                    <form class="my-2" th:action="@{/signup}" method="POST" th:object="${account}">
+                        <div class="form-group">
+                            <p>First Name</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-id-card" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="text" class="form-input" th:field="*{firstName}"
+                                        placeholder="Type your first name" required="true" autofocus="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <p>Last Name</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-id-card" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="text" class="form-input" th:field="*{lastName}"
+                                        placeholder="Type your last name" required="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <p>Date of birth</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="date" class="form-input" th:field="*{doB}"
+                                        placeholder="Type your username" required="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <p>Email</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="email" class="form-input" th:field="*{email}"
+                                        placeholder="Type your email" required="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <p>Username</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="text" class="form-input" th:field="*{username}"
+                                        placeholder="Type your username" required="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <p>Password</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-lock" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="password" class="form-input" th:field="*{password}"
+                                        placeholder="Type your password" required="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <p>Re-enter password</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-lock" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="password" class="form-input" name="rePassword"
+                                        placeholder="Re-enter your password" required="true">
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" class="gradient-button">Signup</button><br><br>
+                        <!-- <div class="row justify-content-between m-0"> -->
+                            <a th:href="@{/login}"><p class="p-login-question">I've already have an account</p></a>
+                        <!-- </div> -->
+                    </form>
+                </div>
             </div>
         </div>
-        <ul class="navbar-nav ml-auto">
-            <a class="btn btn-primary btn-login" th:href="@{/login}" style="font-size: min(3vw, 16px);">
-                <img
-                    src="https://scontent-xsp1-3.xx.fbcdn.net/v/t1.15752-9/cp0/223800344_357209615963439_8115387235500925903_n.png?_nc_cat=111&ccb=1-3&_nc_sid=ae9488&_nc_ohc=K0woQ9L8LAwAX8dw-XI&_nc_ht=scontent-xsp1-3.xx&oh=63cde71a59866447626b0259efaf6cdc&oe=612B6FCD">
-                Login
-            </a>
-        </ul>
-    </nav>
-
-    <div class="col-md-12" style="margin-top: 2vw;">
-        <div style="margin-left: 6vw; margin-right:6vw">
-            <p class="navbar-brand" style="font-size: min(5vw, 30px);">Signup an account</p>
-            <hr style="background-color: #dddddd;">
-        </div>
     </div>
-    <div class="col-md-6" style="margin-top:3vw">
-        <form th:action="@{/signup}" th:object="${account}" method="POST">
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                    <b>First Name</b>
-                </div>
-                <div class="col-md-5">
-                    <input type="text" th:field="*{firstName}" required>
-                </div>
-            </div>
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                    <b>Last Name</b>
-                </div>
-                <div class="col-md-5">
-                    <input type="text" th:field="*{lastName}" required>
-                </div>
-            </div>
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                    <b>User Name</b>
-                </div>
-                <div class="col-md-5">
-                    <input type="text" th:field="*{username}" required>
-                </div>
-            </div>
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                    <b>Password</b>
-                </div>
-                <div class="col-md-5">
-                    <input type="password" th:field="*{password}" required>
-                </div>
-            </div>
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                    <b>Date of birth</b>
-                </div>
-                <div class="col-md-5">
-                    <input type="date" th:field="*{doB}" style="width: 61.5%;" required>
-                </div>
-            </div>
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                    <b>Email</b>
-                </div>
-                <div class="col-md-5">
-                    <input type="email" th:field="*{email}" required>
-                </div>
-            </div>
 
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                </div>
-                <div class="col-md-5">
-                    <button class="btn btn-primary" style="background-color: #428bca; color:white">Sign Up</button>
-                </div>
-            </div>
-
-            <div class="form-group row" style="margin-left: 6vw;">
-                <div class="col-md-3">
-                </div>
-                <div class="col-md-5">
-                    <div th:if="${error}">
-                        <div th:text="${error}" style="color: #ff0044;"></div>
-                    </div>
-                    <div th:if="${success}">
-                        <div th:text="${success}" style="color: #11a10c;"></div>
-                    </div>
-                </div>
-        </form>
-    </div>
 </body>
 
 </html>
