--- a/Quiz-web/src/main/resources/templates/studentCompleted.html
+++ b/Quiz-web/src/main/resources/templates/studentCompleted.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/instructorLibrary.css}">
+    <link rel="stylesheet" th:href="@{/css/studentHome.css}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -170,7 +171,7 @@
         <!--/Content-->
     </div>
 
-    <link rel="stylesheet" href="/css/popupStyle.css">
+    <link rel="stylesheet" th:href="@{/css/popupStyle.css}">
     <th:block th:if=${listQuizList}>
         <th:block th:each="listQuiz: ${listQuizList}">
             <div class="form-popup" th:id="${listQuiz.id}">
