--- a/Quiz-web/src/main/resources/templates/studentRunning.html
+++ b/Quiz-web/src/main/resources/templates/studentRunning.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/instructorLibrary.css}">
+    <link rel="stylesheet" th:href="@{/css/studentHome.css}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -180,7 +181,7 @@
                     <hr>
                     <h6 th:text="${listQuiz.numberOfQuiz + ' questions'}"></h6>
                     <h6 th:text="${'Time: ' + listQuiz.timeLimit}"></h6>
-                    <button type="submit" class="btn"><b>Play</b></button>
+                    <button type="submit" class="btn"><b>Continue</b></button>
                     <button type="button" class="btn cancel"
                         th:onclick="'closeForm(\'' + ${listQuiz.id} + '\');'"><b>Close</b></button>
                 </form>
